--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,52 @@
-// TODO
+.main {
+  display: flex;
+  flex-direction: column;
+  row-gap: 3rem;
+
+  button {
+    all: unset;
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--hightlight);
+
+    cursor: pointer;
+  }
+}
+
+.post {
+  display: flex;
+  flex-direction: column;
+
+  h1 {
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 2.5rem;
+    color: var(--heading);
+
+    margin-bottom: 0.5rem;
+
+    @media (max-width: 768px) {
+      font-size: 1.5rem;
+      line-height: 2rem;
+
+      margin-bottom: 1rem;
+
+      text-align: center;
+    }
+  }
+
+  h2 {
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--body);
+
+    margin-bottom: 1.2rem;
+  }
+
+  .info {
+    display: flex;
+    column-gap: 2rem;
+
+    color: var(--info);
+  }
+}
