--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,55 @@
-// TODO
+.main {
+  display: flex;
+  flex-direction: column;
+
+  .post {
+    display: flex;
+    flex-direction: column;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 400px;
+      margin-bottom: 2rem !important;
+      object-fit: cover;
+    }
+
+    h1 {
+      font-size: 2.6rem;
+      font-weight: 700;
+      color: var(--heading);
+
+      margin-bottom: 1rem;
+    }
+
+    div {
+      .info {
+        display: flex;
+        column-gap: 1.2rem;
+
+        margin-bottom: 3rem;
+
+        color: var(--info);
+
+        font-size: 1rem;
+      }
+    }
+
+    .content {
+      h2 {
+        font-size: 1.6rem;
+        font-weight: 700;
+        color: var(--heading);
+
+        margin-bottom: 2rem;
+      }
+
+      p {
+        font-size: 1rem;
+        font-weight: 400;
+        color: var(--body);
+        margin-bottom: 3rem;
+      }
+    }
+  }
+}
